0026512: Build fails with VTK 6.2 and OpenGL2 Rendering Backend

Support of VTK with OpenGL2 Rendering Backend was added.